--- a/react backup/src/gsstyling.css
+++ b/react backup/src/gsstyling.css
@@ -271,13 +271,15 @@ table {
 }
 
 .post-content {
-  height: 300px;
+  height: 150px;
   justify-content: flex-start;
   width: 100%;
   margin: 10px;
   border-radius: 2px;
-  padding-bottom: 42px;
+  padding: 10px;
+  font-family: "Times New Roman", Times, serif;
   font-size: 15px;
+  font-style: normal;
   border-style: solid;
   border-width: 1px;
 }
